# MLtalk

./: Cargo.toml  README.md
.github/workflows/: deploy_wasm.yml
.lade/: build.rhai
client/: Cargo.toml
client/src/: main.rs  util.rs
core/: Cargo.toml
core/src/: block.rs  engine.rs  expr.rs  fault.rs  func.rs  lexer.rs  lib.rs  node.rs  op.rs  operator.rs  statement.rs  stmt.rs  type.rs  util.rs  value.rs
docs/: book.html  index.html  installer.sh  script.js  style.css
docs/lib/: std.ml
docs/pkg/: mltalk_wasm.d.ts  mltalk_wasm.js  mltalk_wasm_bg.wasm  mltalk_wasm_bg.wasm.d.ts  package.json
example/: calcpi.ml  clacpi.ml  fizzbuzz.lm  fizzbuzz.ml  object.ml  prime.lm  prime.ml  server.ml  solvepi.ml  stdlib.ml
example/compiler/: Makefile  compiler.ml
repl/: Cargo.toml
repl/src/: main.rs  util.rs
src/: main.rs  utils.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
