[package]
name = "rumy"
version = "0.1.0"
edition = "2021"
authors = ["梶塚太智 <kajizukataichi@outlook.jp>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.10", features = ["blocking"] }
colored = "2.0"
indexmap = "2.7.0"
rustyline = "15.0.0"
thiserror = "2.0.9"
unicode-xid = "0.2.6"
url = "2.5.4"
